examples/test/testpolicy5778.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5778
  namespace: namespace495
spec:
  podSelector:
    matchLabels:
      key8: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value21
          key33: value42
      podSelector:
        matchLabels:
          key11: value16
          key8: value24
